--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
 env/
 venv/
+.DS_Store
+.env
+.flaskenv
+*.pyc
+*.pyo
+.venv/
+env*
+dist/
+build/
+*.egg
+*.egg-info/
+.tox/
+.cache/
+.pytest_cache/
+.idea/
+docs/_build/
+.vscode
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+*,cover
